[tool.poetry]
name = "kube_yaml_learner"
version = "0.1.0"
description = ""
authors = ["Wong Jiang Fung <jeff@leadbook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
requests-cache = "^0.7.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
